--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,20 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.14.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-da</argLine> <!-- Desactivar las aserciones -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
